signup footer not aligned - fixed

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,3 +1,9 @@
 p {
     padding: 0;
 }
+
+footer p {
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 50px;
+}
